[gd_scene load_steps=4 format=3 uid="uid://dh34wt4kj0eis"]

[ext_resource type="Script" path="res://scripts/accelerator.gd" id="1_lewwi"]
[ext_resource type="Texture2D" uid="uid://x3t466c5rvhr" path="res://res/tiles/LVL1/level1_furniture.png" id="1_qcimq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjmuj"]
size = Vector2(8, 10)

[node name="Accelerator" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_lewwi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gjmuj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qcimq")
region_enabled = true
region_rect = Rect2(11, 73, 10, 13)

[node name="RespawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
